Fix planner remove button on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -312,28 +312,27 @@ button:disabled {
   list-style-type: none;
   padding: 0;
   margin: 0;
+    display: flex;
+  flex-direction: column;
 }
 
 .planner-item {
-  display: flex;
-  align-items: center;
-  padding: 0px 15px;
   cursor: grab;
-  margin: 10px;
-  margin-top: -10px;
+  margin-left: 50px;
+  margin-top: -32px;
 }
 
-.remove-perk {
+.remove-planner-item-button {
   width: 15px;
   height: 15px;
   border: 1px solid var(--main-color);
   cursor: pointer;
   color: var(--background-color);
   background-color: var(--main-color);
-  margin-right: 20px;
+  margin-left: 20px;
 }
 
-.remove-perk:hover {
+.remove-planner-item-button:hover {
   background: var(--secondary-color);
 }
 
